--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "next": "14.2.13",
+    "next-intl": "^3.20.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
   },
