feat: add hero section component, update tailwind config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,37 +2,37 @@
   "workbench.colorCustomizations": {
     "statusBarItem.remoteForeground": "#ffffff",
     "titleBar.inactiveForeground": "#ffffff",
-    "titleBar.inactiveBackground": "#daff01",
-    "selection.background": "#daff01",
-    "textLink.foreground": "#daff01",
-    "textLink.activeForeground": "#daff01",
-    "button.background": "#daff01",
-    "inputOption.activeBorder": "#daff01",
-    "inputOption.activeBackground": "#daff01",
-    "inputOption.activeForeground": "#daff01",
-    "inputValidation.warningBorder": "#daff01",
-    "scrollbarSlider.hoverBackground": "#daff01",
-    "scrollbarSlider.activeBackground": "#daff01",
-    "badge.background": "#daff01",
-    "progressBar.background": "#daff01",
-    "list.activeSelectionForeground": "#daff01",
-    "list.highlightForeground": "#daff01",
-    "list.inactiveSelectionForeground": "#daff01",
-    "listFilterWidget.outline": "#daff01",
-    "activityBar.foreground": "#daff01",
-    "activityBarBadge.background": "#daff01",
-    "sideBarSectionHeader.foreground": "#daff01",
-    "tab.activeBorder": "#daff01",
-    "editorLineNumber.activeForeground": "#daff01",
-    "editorCursor.foreground": "#daff01",
-    "editor.findMatchBackground": "#daff01",
-    "editorLink.activeForeground": "#daff01",
-    "editorOverviewRuler.warningForeground": "#daff01",
-    "editorWarning.foreground": "#daff01",
-    "editorSuggestWidget.highlightForeground": "#daff01",
-    "statusBarItem.prominentHoverBackground": "#daff01",
-    "statusBarItem.remoteBackground": "#daff01",
-    "extensionButton.prominentBackground": "#daff01",
-    "debugConsoleInputIcon.foreground": "#daff01",
+    "titleBar.inactiveBackground": "#7C00FE",
+    "selection.background": "#7C00FE",
+    "textLink.foreground": "#7C00FE",
+    "textLink.activeForeground": "#7C00FE",
+    "button.background": "#7C00FE",
+    "inputOption.activeBorder": "#7C00FE",
+    "inputOption.activeBackground": "#7C00FE",
+    "inputOption.activeForeground": "#7C00FE",
+    "inputValidation.warningBorder": "#7C00FE",
+    "scrollbarSlider.hoverBackground": "#7C00FE",
+    "scrollbarSlider.activeBackground": "#7C00FE",
+    "badge.background": "#7C00FE",
+    "progressBar.background": "#7C00FE",
+    "list.activeSelectionForeground": "#7C00FE",
+    "list.highlightForeground": "#7C00FE",
+    "list.inactiveSelectionForeground": "#7C00FE",
+    "listFilterWidget.outline": "#7C00FE",
+    "activityBar.foreground": "#7C00FE",
+    "activityBarBadge.background": "#7C00FE",
+    "sideBarSectionHeader.foreground": "#7C00FE",
+    "tab.activeBorder": "#7C00FE",
+    "editorLineNumber.activeForeground": "#7C00FE",
+    "editorCursor.foreground": "#7C00FE",
+    "editor.findMatchBackground": "#7C00FE",
+    "editorLink.activeForeground": "#7C00FE",
+    "editorOverviewRuler.warningForeground": "#7C00FE",
+    "editorWarning.foreground": "#7C00FE",
+    "editorSuggestWidget.highlightForeground": "#7C00FE",
+    "statusBarItem.prominentHoverBackground": "#7C00FE",
+    "statusBarItem.remoteBackground": "#7C00FE",
+    "extensionButton.prominentBackground": "#7C00FE",
+    "debugConsoleInputIcon.foreground": "#7C00FE",
   }
 }
