--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
+    "lucide-react": "^0.447.0",
     "next": "14.2.13",
     "next-intl": "^3.20.0",
     "next-themes": "^0.3.0",
