--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,88 +1,85 @@
 [
   {
     "id": "396d4fad-0638-4e34-a424-d2051d61741d",
-    "name": "New Store sssssssss",
-    "descriptionKey": "new_store.description",
-    "image": "projects/fandom.webp",
-    "repository": "https://github.com/tyronejosee/project_new_store",
-    "website": "https://new-store-8vlz.onrender.com/",
+    "name": "Inventory Management System",
+    "descriptionKey": "project_new_store",
+    "image": "projects/inventory_management.webp",
+    "repository": "https://github.com/tyronejosee/inventory_management",
+    "website": "https://inventory-management-system.com/",
     "skills": [
       "Python",
       "Django",
-      "JQuery",
-      "Posgres",
-      "PayPal"
-    ],
-    "status": true
+      "PostgreSQL",
+      "JWT"
+    ]
   },
   {
     "id": "db694f8b-3a45-4529-a943-aa485b6186b0",
-    "name": "Awesome App",
-    "descriptionKey": "new_store.description",
-    "image": "projects/fandom.webp",
-    "repository": "https://github.com/awesome-app",
-    "website": "https://www.awesome-app.com",
+    "name": "Task Management API",
+    "descriptionKey": "project_new_store",
+    "image": "projects/task_management.webp",
+    "repository": "https://github.com/tyronejosee/task_management",
+    "website": "https://task-management-api.com",
     "skills": [
-      "React Native",
-      "Firebase",
-      "PayPal"
-    ],
-    "status": false
+      "Node.js",
+      "Express",
+      "MongoDB",
+      "GraphQL"
+    ]
   },
   {
     "id": "724ce7c4-97c7-4ff4-928a-45382e2e04f4",
-    "name": "Cool Website",
-    "descriptionKey": "new_store.description",
-    "image": "projects/fandom.webp",
-    "repository": "https://github.com/cool-website",
-    "website": "https://www.cool-website.com",
+    "name": "Social Media Backend",
+    "descriptionKey": "project_new_store",
+    "image": "projects/social_media.webp",
+    "repository": "https://github.com/tyronejosee/social_media_backend",
+    "website": "https://social-media-backend.com",
     "skills": [
-      "React",
-      "Node.js",
-      "MongoDB"
-    ],
-    "status": false
+      "Ruby on Rails",
+      "PostgreSQL",
+      "Redis"
+    ]
   },
   {
     "id": "cac4aa91-5f39-4dad-b941-3d3f5d103ac4",
-    "name": "E-commerce Platform",
-    "descriptionKey": "new_store.description",
-    "image": "projects/fandom.webp",
-    "repository": "https://github.com/e-commerce-platform",
-    "website": "https://www.e-commerce-platform.com",
+    "name": "E-commerce API",
+    "descriptionKey": "project_new_store",
+    "image": "projects/e_commerce.webp",
+    "repository": "https://github.com/tyronejosee/e_commerce_api",
+    "website": "https://e-commerce-api.com",
     "skills": [
-      "React",
-      "Redux",
-      "Node.js",
-      "MongoDB"
-    ],
-    "status": true
+      "Django",
+      "DRF",
+      "PostgreSQL",
+      "Stripe"
+    ]
   },
   {
     "id": "db69b5d6-2cb4-4967-8d17-514c886d5e04",
-    "name": "Blog Website",
-    "descriptionKey": "new_store.description",
-    "image": "projects/fandom.webp",
-    "repository": "https://github.com/blog-website",
-    "website": "https://www.blog-website.com",
+    "name": "Blog API",
+    "descriptionKey": "project_new_store",
+    "image": "projects/blog_api.webp",
+    "repository": "https://github.com/tyronejosee/blog_api",
+    "website": "https://blog-api.com",
     "skills": [
-      "React",
-      "Node.js",
-      "MongoDB"
-    ],
-    "status": false
+      "Flask",
+      "SQLAlchemy",
+      "MySQL",
+      "JWT"
+    ]
   },
   {
     "id": "3291d677-8994-4bd6-92ae-1d69fbccace2",
-    "name": "Portfolio Website",
-    "descriptionKey": "new_store.description",
-    "image": "projects/fandom.webp",
-    "repository": "https://github.com/portfolio-website",
-    "website": "https://www.portfolio-website.com",
+    "name": "Portfolio Backend",
+    "descriptionKey": "project_new_store",
+    "image": "projects/portfolio_backend.webp",
+    "repository": "https://github.com/tyronejosee/portfolio_backend",
+    "website": "https://portfolio-backend.com",
     "skills": [
-      "React",
-      "TypeScript"
-    ],
-    "status": true
+      "Node.js",
+      "Express",
+      "MongoDB",
+      "Mongoose"
+    ]
   }
 ]
