--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.8",
+    "@sendgrid/mail": "^8.1.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.447.0",
