--- a/package.json
+++ b/package.json
@@ -9,31 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@nextui-org/react": "^2.4.8",
-    "@sendgrid/mail": "^8.1.4",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.9.0",
-    "lucide-react": "^0.447.0",
+    "@hookform/resolvers": "3.9.0",
+    "@nextui-org/react": "2.4.8",
+    "clsx": "2.1.1",
+    "framer-motion": "11.9.0",
+    "lucide-react": "0.447.0",
     "next": "14.2.13",
-    "next-intl": "^3.20.0",
-    "next-themes": "^0.3.0",
-    "nodemailer": "^6.9.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-intersection-observer": "^9.13.1",
-    "zod": "^3.23.8"
+    "next-themes": "0.3.0",
+    "react": "18",
+    "react-dom": "18",
+    "react-hook-form": "7.53.0",
+    "react-intersection-observer": "9.13.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/nodemailer": "^6.4.16",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "20",
+    "@types/nodemailer": "6.4.16",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "eslint": "8",
     "eslint-config-next": "14.2.13",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "8",
+    "tailwindcss": "3.4.1",
+    "typescript": "5"
   }
 }
