--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.7.5",
     "@hookform/resolvers": "3.9.0",
-    "@nextui-org/react": "2.4.8",
     "clsx": "2.1.1",
     "framer-motion": "11.9.0",
     "lucide-react": "0.447.0",
     "next": "14.2.13",
-    "next-themes": "0.3.0",
+    "next-themes": "^0.4.6",
     "react": "18",
     "react-dom": "18",
     "react-hook-form": "7.53.0",
