--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.9.0",
     "lucide-react": "0.447.0",
-    "next": "14.2.13",
+    "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "18",
     "react-dom": "18",
@@ -33,5 +33,12 @@
     "postcss": "8",
     "tailwindcss": "3.4.1",
     "typescript": "5"
+  },
+  "pnpm": {
+    "overrides": {
+      "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+      "nanoid@<3.3.8": ">=3.3.8",
+      "@babel/runtime@<7.26.10": ">=7.26.10"
+    }
   }
 }
