--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.1",
+    "@next/eslint-plugin-next": "^15.3.1",
     "@types/node": "20",
     "@types/nodemailer": "6.4.16",
     "@types/react": "18",
     "@types/react-dom": "18",
-    "eslint": "8",
+    "eslint": "^9.25.1",
     "eslint-config-next": "14.2.13",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.0.0",
     "postcss": "8",
     "tailwindcss": "3.4.1",
-    "typescript": "5"
+    "typescript": "5",
+    "typescript-eslint": "^8.31.1"
   },
   "pnpm": {
     "overrides": {
